--- a/rust_watcher/Cargo.toml
+++ b/rust_watcher/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 chrono = "0.4.42"
 notify = "8.1.0"
 rustler = { version = "0.37.0", features = ["nif_version_2_17", "derive"], default-features = false  }
+glob = "0.3.2"
 
 [lib]
 name = "rust_watcher"
